--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@ js:
   <div class="wrapper">
 
       <div>
-        <h2>Page One</h2>
+        <h2>Resume</h2>
         <p>Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         <a href="{{ "/pages/" | prepend: site.baseurl }}">Read more</a>
       </div>
 
       <div>
         <div>
-          <h2>Page Two</h2>
+          <h2>Portfolio</h2>
           <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
           <a href="{{ "/pages/page-two" | prepend: site.baseurl }}">Read more</a>
        </div>
       </div>
       <div>
         <div>
-          <h2>Page Three</h2>
+          <h2>About Me</h2>
           <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don’t look even slightly believable.</p>
           <a href="{{ "/pages/page-three" | prepend: site.baseurl }}">Read more</a>
         </div>
